--- a/blogs/client/public/index.html
+++ b/blogs/client/public/index.html
@@ -15,6 +15,12 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;1,300&family=Lora:ital,wght@1,400;1,500&family=Poppins:wght@300;600&family=Trirong:wght@500&display=swap"
       rel="stylesheet"
     />
+    <style>
+      .link {
+        text-decoration: none;
+        color: inherit;
+      }
+    </style>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
